--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <h1>LINEで通知を受け取ることができます</h1>
+
 <a href="https://notify-bot.line.me/oauth/authorize?response_type=code&client_id=a19ECgC23P5fCbz3RAj3Df&redirect_uri=https://tenaga.herokuapp.com/notifyToken&scope=notify&state=tenaga&response_mode=form_post">LINE NOTIFYに登録</a>
-   
+<!-- client_id 運営のlineアカウントでNotifyに登録すると発行される
+  redirect_uri 運営のlineアカウントで登録(フロント側のトークン取得URLを設定)
+  state        ユーザごとにハッシュ値などを設定
+-->   
