--- a/index.html
+++ b/index.html
@@ -5,3 +5,7 @@
   redirect_uri 運営のlineアカウントで登録(フロント側のトークン取得URLを設定)
   state        ユーザごとにハッシュ値などを設定
 -->   
+
+<form action="stripeCreateCus" method="post">
+  <input type="submit" value="カード登録">
+</form>
