--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   state        ユーザごとにハッシュ値などを設定
 -->   
 
-<form action="/stripeCreateCus" method="post">
-  <input type="submit" value="カード登録">
+<form action="/stripeCreateCus" method="get">
+  <input type="submit" value="stripesample">
 </form>
